...
     *
     * @param callSite 예외 발생 시 로그에 찍힐 Site
     * @param loading true 일 경우 호출 시 로딩 On, 작업이 끝난 후 로딩 Off
     */
    private suspend fun databaseTry(
        callSite: DatabaseCallSite,
        loading: Boolean = true,
        onFail: (Exception) -> Unit,
        task: suspend CoroutineScope.() -> Unit,
    ) = withContext(Dispatchers.IO) {
        try {
            if (loading) loadingOn()
            withContext(context = NonCancellable) { task() }
...
